@@ -1,6 +1,8 @@
 java ^
 --add-exports=java.desktop/sun.awt.shell=ALL-UNNAMED ^
 --add-exports=java.desktop/com.sun.java.swing.plaf.windows=ALL-UNNAMED ^
--Xmx2g -Dorg.freeplane.userfpdir="%APPDATA%\\Freeplane" ^
--Dfile.encoding=UTF-8 ^
+-XX:+IgnoreUnrecognizedVMOptions ^
+-XX:MaxRAM=20g -XX:MaxRAMPercentage=15.0 ^
+-Djava.security.manager=allow ^
+-Dorg.freeplane.userfpdir="%APPDATA%\\Freeplane" ^
 -jar freeplanelauncher.jar %*
